<resources xmlns:tools="http://schemas.android.com/tools">
    <string-array name="spinner_items">
        <item> cameriere </item>
        <item> addetto_cucina </item>
        <item> supervisore </item>
    </string-array>

    <string-array name="spinner_item_cameriere_addettocucina">
        <item> cameriere </item>
        <item> addetto_cucina </item>
    </string-array>

    <string-array name="spinner_item_cameriere_supervisore">
        <item> cameriere </item>
        <item> supervisore </item>
    </string-array>

    <string-array name="spinner_item_only_cameriere">
        <item> cameriere </item>

    </string-array>


    <string name="app_name" translatable="false">Ratatouille23</string>
    <string name="app_title" translatable="false">RATATOUILLE23</string>
    <string name="loginBtn">Login</string>
    <string name="signedQuestion">Already Signed In?</string>
    <string name="contentDescriptionMainLogo" translatable="false">logo</string>
    <string name="signupQuestion">Not signed?</string>
    <string name="registerBtn">register</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="nameRequired">Name*</string>
    <string name="PasswordRequired" translatable="false">Password*</string>
    <string name="Password" translatable="false">Password</string>
    <string name="EmailRequired" translatable="false">Email*</string>
    <string name="Email" translatable="false">Email</string>
    <string name="PartitaIVARequired">VAT Number*</string>
    <string name="PartitaIVA">VAT Number</string>
    <string name="CodiceFiscaleRequired">Fiscal Code*</string>
    <string name="CodiceFiscale">Fiscal Code</string>
    <string name="RoleRequired">Position*</string>
    <string name="welcome_register_waiter" translatable="true">You are entering a new waiter</string>
    <string name="welcome">WELCOME</string>
    <string name="registerOK">Register successful!</string>
    <string name="registerWrong">Something Wrong!</string>
    <string name="loginWrongCred">Invalid credentials</string>
    <string name="loginInsertCred">Insert credentials</string>
    <string name="AdminControlPanelText">Panel of:</string>
    <string name="AdminResturant">Your restaurant:</string>
    <string name="addResturant">Add restaurant</string>
    <string name="Exit">Exit</string>
    <string name="resturantString">Restaurant</string>
    <string name="addWaiter">Add waiter</string>
    <string name="addMenu">Add Menu</string>
    <string name="WaiterString">Waiter</string>
    <string name="Save">Save</string>
    <string name="location">Address</string>
    <string name="place_sittings">Number of seats</string>
    <string name="Name">Name</string>
    <string name="AdminDBNoResturant">You don\'t have a restaurant!</string>
    <string name="EditSting">Edit</string>
    <string name="saveResturantTitle">Register your restaurant</string>
    <string name="takeOrder">New order</string>
    <string name="newOrder">New Order</string>
    <string name="tableNumber">Table n°</string>
    <string name="orderStatus">Order Status</string>
    <string name="welcomeWaiter">Welcome: </string>
    <string name="balloonRegister">\"Get started as an Administrator!\"</string>
    <string name="balloonRegisterEmployee">\"Register your employee here!\"</string>
    <string name="balloonAdminDashboard">\"Here you can manage your Restaurants!\"</string>
    <string name="SurnameRequired">Surname*</string>
    <string name="edit">Edit</string>
    <string name="profile">Profile</string>
    <string name="showStats">Statistics</string>
    <string name="Logout">Logout</string>
    <string name="add_waiter">Add worker</string>
    <string name="manage_menu">Manage Menu</string>
    <string name="download_menu">Download Menu</string>
    <string name="add_product">Add product</string>
    <string name="ballonLogin">\"Start with login!\"</string>
    <string name="app_logo" translatable="false">App Logo</string>
    <string name="profileBalloon">\"Here there is your profile\"</string>
    <string name="nameLabel">Name:</string>
    <string name="surnameLabel">Surname:</string>
    <string name="CodiceFiscaleLabel">Fiscal Code:</string>
    <string name="emailLabel" translatable="false">Email:</string>
    <string name="PartitaIVALabel">VAT Number:</string>
    <string name="Manage">Manage</string>
    <string name="passwordLabel" translatable="false">Password:</string>
    <string name="loginWrongCred2">Fill the fields correctly!</string>
    <string name="dialogAddProduct_name" tools:ignore="TypographyEllipsis">Product name ...</string>
    <string name="dialogAddProduct_description" tools:ignore="TypographyEllipsis">Description ...</string>
    <string name="dialogAddProduct_allergens" tools:ignore="TypographyEllipsis">Allergens ...</string>
    <string name="dialogAddProduct_price" tools:ignore="TypographyEllipsis">Price ...</string>
    <string name="Cancel">Cancel</string>
    <string name="Ok" translatable="false" tools:ignore="ButtonCase">Ok</string>
    <string name="Type">Type</string>
    <string name="Food_type">Food type</string>
    <string name="Search">Search</string>
    <string name="Prepackaged">Prepackaged</string>
    <string name="add_resturant_label" translatable="false">Add Resturant Label</string>
    <string name="show_profile_label" translatable="false">Show profile label</string>
    <string name="stats_label" translatable="false">Stats label</string>
    <string name="logout_label" translatable="false">logout label</string>
    <string name="biagioshape" translatable="false">BiagioShape</string>
    <string name="add_product_label" translatable="false">Add product label</string>
    <string name="add_course">Add course</string>
    <string name="your_workers">Your workers: (Long press to delete)</string>
    <string name="editEmail">Edit email</string>
    <string name="editPassword">Change password</string>
    <string name="old_field">Old</string>
    <string name="new_field">New</string>
    <string name="submit">Submit</string>
    <string name="newEmail">New email</string>
    <string name="emailError">Email not valid!</string>
    <string name="newPassword">New password</string>
    <string name="passwordShort">Password too short!</string>
    <string name="passwordSimple">Password too simple!</string>
    <string name="no" translatable="false">NO</string>
    <string name="yes">YES</string>
    <string name="WaiterAdded">Worker added!</string>
    <string name="save_waiter_error">Problems saving waiter</string>
    <string name="invalidPassword">Password not valid!</string>
    <string name="requestProblems">Some request problems</string>
    <string name="fieldTooShort">Field too Short!</string>
    <string name="chooseANumberInRange">Choose a number between 5 and 1000!</string>
    <string name="wantToExit">Do you want to exit?</string>
    <string name="fieldRequired">Field required!</string>
    <string name="NameShortError">Name too short!</string>
    <string name="SurnameShortError">Surname too short!</string>
    <string name="backToLoginDialog">Modified won\'t saved. Do you want to exit?</string>
    <string name="nome_del_menu">Menu name</string>
    <string name="tipo_menu">Menu type</string>
    <string name="Order">Order</string>
    <string name="create_menu">CREATE MENU</string>
    <string name="emailUsed">Email already used!</string>
    <string name="PIVAexist">VAT Number already exist</string>
    <string name="CFexist">Fiscal Code already exist!</string>
    <string name="passwordHint1">*Password must be at least 8 characters</string>
    <string name="passwordHint2">*Password must contain at least 1 uppercase character, 1 letter and 1 special character</string>
    <string name="plateManagerBalloon">Add all the dishes into the menu, or see it in PDF</string>
    <string name="menuAval">MENU AVAILABLE</string>
    <string name="fillAllFieldsWarning">Fill out all fields!</string>
    <string name="menuInDownload">Menu available in Download</string>
    <string name="NetworkError">Network Error</string>
    <string name="fieldIncorrect">Incorrect field!</string>
    <string name="CFinvalid">Invalid Fiscal Code!</string>
    <string name="numero_di_telefono_ristorante">Telephone Number</string>
    <string name="antipasti">Appetizers</string>
    <string name="back">Back</string>
    <string name="primi_piatti">Main dishes</string>
    <string name="seconds_dishes">Seconds dishes</string>
    <string name="desserts" translatable="false">Desserts</string>
    <string name="pendingOrders">Pending orders</string>
    <string name="notification">Notifications</string>
    <string name="balloonSupDashboard_1">Welcome in your Dashboard,</string>
    <string name="balloonSupDashboard_2">Here you can find everything you need to monitor what\'s happening in the Restaurant!</string>
    <string name="duplicate_restaurant">Attention: the restaurant you are trying to add is already present in your list of Restaurants!</string>
    <string name="telNumberNotValid">Phone number not valid!</string>
    <string name="dialogExit">Are you sure you want to exit?</string>
    <string name="backWithoutSave">The changes will not be saved. Are you sure you want to exit?</string>
    <string name="contorni">Side dishes</string>
    <string name="pizze" translatable="false">Pizza</string>
    <string name="drink" translatable="false">Drink</string>
    <string name="alfabetico">ALPHABETICALLY</string>
    <string name="per_tipo">BY TYPE</string>
    <string name="menuDialog">"How do you want the items to be saved in the menu? "</string>
    <string name="nuovo_avviso">New message</string>
    <string name="delete_menu">Delete menu</string>
    <string name="welcomeOrderStatusWaiter">Here you can see your pending orders</string>
    <string name="evaso_da">Marked by:</string>
    <string name="evaso_da_inserire_nome_cuoco">insert chef name</string>


</resources>