<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sfondo_1_con_patina"
    tools:context=".Activities.AdminDashboardActivity">

    <LinearLayout
        android:id="@+id/linearLayoutSupervisorTop"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03">

        <ImageView
            android:id="@+id/logoBiagioSupervisorDash"
            android:layout_width="129dp"
            android:layout_height="130dp"
            android:layout_gravity="start"
            android:layout_marginStart="12dp"
            app:srcCompat="@drawable/logobiagio"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="@string/app_logo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="581dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutSupervisorTop"
        tools:ignore="ScrollViewSize">

        <GridLayout
            android:id="@+id/carSupervisordGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="2"
            android:paddingTop="15dp"
            android:rowCount="2"

            tools:ignore="UselessParent">

            <androidx.cardview.widget.CardView
                android:id="@+id/addRestaurantCard"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_row="0"
                android:layout_column="0"
                android:backgroundTint="@color/marrone_secondario"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/add_resturant_label"
                        android:src="@drawable/ic_table_white"
                        tools:ignore="ImageContrastCheck" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/orderStatus"
                        tools:ignore="TextContrastCheck" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/profileCard"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:backgroundTint="@color/marrone_secondario"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:contentDescription="@string/show_profile_label"
                        android:src="@drawable/ic_profile"
                        tools:ignore="ImageContrastCheck" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/profile"
                        tools:ignore="TextContrastCheck" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/statsCard"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:backgroundTint="@color/marrone_secondario"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:contentDescription="@string/stats_label"
                        android:src="@drawable/ic_order"
                        tools:ignore="ImageContrastCheck" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/pendingOrders"
                        android:textColor="#4E342E" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/logoutCard"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:backgroundTint="@color/marrone_secondario"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:contentDescription="@string/logout_label"
                        android:src="@drawable/ic_bye"
                        tools:ignore="ImageContrastCheck" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/Logout"
                        tools:ignore="TextContrastCheck" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>


        </GridLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>